[package]
name = "dc-echo"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"

[dependencies]
s2n-quic-dc = { version = "=0.74.0", features = ["testing"] }
s2n-quic = { version = "=1.74.0" }
s2n-quic-core = { version = "=0.74.0" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace]
members = ["."]
