[package]
name = "echo"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"

[profile.release]
debug = 1

[features]
dhat-heap = []

[dependencies]
s2n-quic = { version = "1", path = "../../quic/s2n-quic" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dhat = "0.3"

[workspace]
members = ["."]
