[package]
name = "quic-echo-server"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"

[[bin]]
name = "quic_echo_server"
path = "src/main.rs"

[dependencies]
s2n-quic = { version = "=1.69.0", features = ["unstable-provider-dc"] }
s2n-quic-core = { version = "=0.69.0", features = ["testing"] }
tokio = { version = "1", features = ["full"] }

[workspace]
